# bitcoin-risk-premia

./: .gitignore  config.yaml  debug.py  main.py  pyproject.toml  requirements.txt
data/phase1/: tensor_pca_factors_broad.npz
data/phase2/: bvrp_curves.npz  hump_bands.npz  phase2_densities.npz
data/phase3/: mfk_unconditional.npz  phase3_CME_crypto.npz  phase3_CME_full.npz  phase3_CME_macro.npz  phase3_DER_crypto.npz  phase3_DER_full.npz  phase3_DER_macro.npz
data_old/phase3/: phase3_CME_full.npz  phase3_DER_macro.npz
data_old/surfaces/: tensor_pca_factors_almeida.npz
notebooks/: 00_data_exploration.ipynb  00_preprocessing.ipynb  01_conditioning.ipynb  01_preprocessing.ipynb  01_ssvi_rnd.ipynb  01_tensor_pca.ipynb  02_ep_decomposition.ipynb  02_ssvi_fitting.ipynb  03_conditional_kernel.ipynb  03_tensor_pca.ipynb  04_conditioning.ipynb  04_conditioning_diagnostics.ipynb  04_moment_decomposition.ipynb  05_cross_venue.ipynb  05_ep_decomposition.ipynb  06_conditional_kernel.ipynb  07_moment_decomposition.ipynb  08_cross_venue.ipynb
notebooks/markdowns/: 00_data_exploration.md  00_preprocessing.md  01_conditioning.md  01_preprocessing.md  01_ssvi_rnd.md  01_tensor_pca.md  02_ep_decomposition.md  02_ssvi_fitting.md  03_conditional_kernel.md  03_tensor_pca.md  04_conditioning.md  04_conditioning_diagnostics.md  04_moment_decomposition.md  05_cross_venue.md  05_ep_decomposition.md  06_conditional_kernel.md  07_moment_decomposition.md  08_cross_venue.md
src/: config.py
src/compression/: build_conditioning_vectors.py  run_tensor.py  run_tensor_pca.py  tensor_pca.py
(+63 files in other folders)
